# learning

./: .envrc  .gitignore  404.html  README.md  flake.nix  index.html  mkdocs.py  mkdocs.yml  sitemap.xml
additional_resources/books/Learning Spark 2ed/: README.md
additional_resources/websites/aoc-2024/: flake.nix
additional_resources/websites/aoc-2024/01-day/: go.mod  main.go
additional_resources/websites/aoc-2024/02-day/: go.mod  main.go
additional_resources/websites/aoc-2024/03-day/: 1  go.mod  main.go
core/: index.html
core/programming/Structure and Interpretation of Computer Programs/: index.html
core/programming/sicp/: index.html
core_subjects/programming/Structure and Interpretation of Computer Programs/: .envrc  .prettierrc  doc.py  export.py  flake.nix  mk-docs.py
docs/: index.md
docs/core/: index.md
leetcode/: flake.nix  go.mod  pyproject.toml
leetcode/go-lc/: 001_two_sum.go  049_group_anagrams.go  217_contains_duplicates.go  242_valid_anagrams.go
leetcode/python-lc/: 001_two_sum.py  011_container_most_water.py  015_3sum.py  020_valid_parentheses.py  042_trap_water.py  049_group_anagrams.py  125_valid_palindrome.py  128_longest_sequence.py  167_two_sum_ii.py  217_contains_duplicates.py  238_product_array_except_self.py  242_valid_anagram.py  271_encode_decode_strings.py  347_top_k_frequent_elements.py  36_valid_sudoku.py  base.py
leetcode/src/leetcode/: __init__.py
search/: search_index.json
teachyourselfcs/programming/Structure and Interpretation of Computer Programs/: export.py  index.html  mk-docs.py
(+110 files in other folders)
