[project]
name = "leetcode"
version = "0.1.0"
description = "One too many hours were spent here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ ]

# [project.scripts]
# hello = "hello_world:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]

